--- a/start/package.json
+++ b/start/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-tutorial-app",
+  "name": "nuxt-report-app",
   "version": "1.0.0",
   "description": "My outstanding Nuxt.js project",
   "author": "Timibadass",
@@ -11,6 +11,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "nuxt": "^2.0.0",
     "vuex-persist": "^2.2.0"
   },
