--- a/finish/package.json
+++ b/finish/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-tutorial-app",
+  "name": "nuxt-report-app",
   "version": "1.0.0",
   "description": "My outstanding Nuxt.js project",
   "author": "Timibadass",
@@ -11,8 +11,13 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@nuxtjs/auth": "^4.9.0",
     "@nuxtjs/axios": "^5.9.7",
     "nuxt": "^2.0.0",
+    "vue-notification": "^1.3.20",
     "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
