--- a/start/package.json
+++ b/start/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "nuxt": "^2.0.0",
+    "vue-notification": "^1.3.20",
     "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
